# ink-tool

./: .gitignore  Cargo.toml  Justfile  build.rs
crates/ink-document/: Cargo.toml  build.rs
crates/ink-document/src/: doc_symbols.rs  document.rs  ids.rs  lib.rs  names.rs  visitor.rs  ws_symbols.rs
crates/ink-syntax/: Cargo.toml
crates/ink-syntax/src/: lib.rs
crates/ink-test/: Cargo.toml
crates/ink-test/src/: lib.rs
crates/text-annotations/: Cargo.toml
crates/text-annotations/src/: lib.rs
crates/tree-traversal/: Cargo.toml
crates/tree-traversal/src/: lib.rs  visitor.rs
crates/util/: Cargo.toml
crates/util/src/: lib.rs  nonempty.rs  testing.rs
crates/util/src/testing/: delay_panics.rs  softly.rs
doc/: ink-fmt.md
examples/: Readme.md  ld41-emoji.fmt.ink  the_intercept.fmt.ink  the_intercept.ink.json
examples/links/: forward_declarations.ink  labels.ink  lists.ink  self-reference.ink  shadowing.ink  temp_vars.ink
examples/links/ambiguous/: a.ink  b.ink
examples/links/knots_and_stitches/: a.ink  b.ink
examples/namespacing/: const.ink  labels.ink  labels_in_knot_header.ink  labels_in_knot_stitch.ink  labels_in_knot_stitch_name_clash.ink  lists.ink  params-visibility.ink  self-reference.ink  shadowing.ink  temp_var_clashes.ink  temp_var_crossvisibility.ink  temp_var_visibility.ink  temp_vars.ink  test.rs  var.ink
examples/namespacing/ambiguous/: a.ink  b.ink
examples/namespacing/knots_and_stitches/: a.ink  b.ink  c.ink
examples/output/: ld41-emoji.ink
src/: cli.rs  config.rs  edit.rs  fmt.rs  format.scm  format_item.rs  formatter.rs  formatting.rs  ink_syntax.rs  lib.rs  lsp.rs  main.rs  node_rule.rs  rules.rs  scanner.rs  test_utils.rs
src/cli/: fmt.rs  lsp.rs  test.rs
src/fmt/: constrained_value.rs  format.scm  format_item.rs  formatting.rs  scanner.rs
src/fmt/formatting/: whitespace.rs
src/fmt/formatting/formatters/: layout.rs  string.rs  tracing.rs
src/fmt/util/: constrained_value.rs  mod.rs
src/formatter/: columns.rs
src/formatting/: formatters.rs  whitespace.rs
src/formatting/formatters/: layout.rs  string.rs  tracing.rs
src/ink_syntax/: visitor.rs
src/lsp/: diagnostics.rs  document.rs  file_watching.rs  http_server.rs  idset.rs  incremental.rs  ink_visitors.rs  links.rs  location.rs  locations.rs  notification_handlers.rs  request_handlers.rs  root_detection.rs  salsa.rs  scopes.rs  shared.rs  state.rs  tree.rs
src/lsp/document/: ids.rs  locations.rs  scoped_names.rs  symbols.rs  workspace_symbols.rs
src/lsp/document/symbols/: document_symbol.rs  workspace_symbol.rs
src/lsp/ink_visitors/: definitions.rs  doc_symbols.rs  globals.rs  names.rs  parse_errors.rs  ws_symbols.rs
src/lsp/location/: specification.rs
src/lsp/salsa/: composition.rs  doc_symbols.rs  idset.rs  names.rs  salsa_block_items.rs  salsa_definitions.rs  salsa_doc_symbols.rs  salsa_links.rs  salsa_locations.rs  salsa_syntax_structs.rs  salsa_ws_symbols.rs  subqueries.rs  ws_symbols.rs
src/lsp/salsa/subqueries/: definitions_of.rs  diagnostics.rs  globals.rs  ink_inventory.rs  local_resolutions.rs  node_flags.rs  node_info.rs  parse_errors.rs  resolve_definitions.rs  root_detection_algorithm.md  story_structure.rs
src/lsp/salsa/subqueries/node_flags/tests/: assertions.rs
src/lsp/salsa/subqueries/node_info/tests/: assertions.rs
src/lsp/state/: completions.rs  goto_definition.rs  goto_references.rs  references.rs  rename.rs
src/lsp/state/tests/: errors.rs  goto_definition.rs  namespacing.rs  story_structure.rs
src/test_utils/: text_annotations.rs
src/type_sitter/: ink.rs
src/util/: constrained_value.rs  mod.rs  testing.rs
tests/: examples.rs  userdoc.rs
tests/common/: mod.rs
