[package]
name = "ink-tool"
description = "Toolset for Inkle's Ink language"
keywords = ["ink", "formatter", "language-server"]
categories = ["command-line-utilities", "development-tools", "game-development"]
version = "0.1.0"
edition = "2021"

[dependencies]
assert2 = "0.3.15"
clap = { version = "4.5.18", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["display", "debug", "error", "from", "into", "deref", "deref_mut"] }
directories = "6.0.0"
ftail = "0.2.0"
itertools = "0.13.0"
jsonrpc = "0.18.0"
line-index = "0.1.1"
log = "0.4.25"
lsp-server = "0.7.7"
lsp-types = "0.97.0"
notify = "6.1.1"
salsa = { git = "https://github.com/salsa-rs/salsa", version = "0.18.0" }
serde = "1.0.210"
serde_json = "1.0.128"
tap = "1.0.1"
tree-sitter = "0.23"
tree-sitter-ink = { path = "../tree-sitter-ink/", version = '24.6.18'}
walkdir = "2.5.0"

[dev-dependencies]
annotate-snippets = "0.11.5"
derive-quickcheck-arbitrary = "0.1.3"
indoc = "2.0.5"
pretty_assertions = "1.4.0"
quickcheck = "1.0.3"
strum = { version = "0.26.3", features = ["derive"] }
test-case = "3.3.1"

[build-dependencies]
cc="*"
derive_builder = "0.20.0"
markdown = "1.0.0-alpha.17"
tree-sitter-ink = { path = "../tree-sitter-ink/", version = '24.6.18'}

[dependencies.type-sitter-lib]
version = "^0"
# path = "../type-sitter/type-sitter-lib"
# git = "https://github.com/wldmr/type-sitter.git"
git = "https://github.com/jakobeha/type-sitter.git"
# branch = "main"

[build-dependencies.type-sitter-gen]
version = "^0"
# path = "../type-sitter/type-sitter-gen"
# git = "https://github.com/wldmr/type-sitter.git"
git = "https://github.com/jakobeha/type-sitter.git"
# branch = "main"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
