[package]
name = "ink-tool"
description = "Toolset for Inkle's Ink language"
keywords = ["ink", "formatter", "language-server"]
categories = ["command-line-utilities", "development-tools", "game-development"]
version.workspace = true
edition.workspace = true

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
assert2 = "0.3.15"
derive-quickcheck-arbitrary = "0.1.3"
fern = "0.7.1"
indoc = "2.0.5"
ink-document = { path = "./crates/ink-document" }
ink-syntax = { path = "./crates/ink-syntax" }
ink-test= { path = "./crates/ink-test" }
itertools = "0.13.0"
line-index = "0.1.1"
log = "0.4.25"
lsp-types = "0.97.0"
pretty_assertions = "1.4.0"
quickcheck = "1.0.3"
tap = "1"
serde = "1"
serde_json = "1"
test-case = "3.3.1"
text-annotations = { path = "./crates/text-annotations" }
tree-sitter = "0.25" # TODO: Stopgap measure? Ideally, we want this confined to the ink-document crate
tree-sitter-ink = { git = "https://github.com/wldmr/tree-sitter-ink.git", rev = "6106808"}
tree-traversal = { path = "./crates/tree-traversal" }
util = { path = "./crates/util" }
walkdir = "2.5.0"

[workspace.dependencies.rassert]
version = "1"

[workspace.dependencies.derive_more]
version = "1.0.0"
features = ["as_ref", "debug", "deref", "deref_mut", "display","error", "from", "into"]

# My own fork with customizations
# git = "https://github.com/wldmr/rassert.git"
# branch = "multiple-expectations"
# path = "../rassert"

[workspace.dependencies.type-sitter]
version = "0.8"
# path = "../type-sitter/type-sitter-lib"
# git = "https://github.com/wldmr/type-sitter.git"
git = "https://github.com/jakobeha/type-sitter.git"
# branch = "main"

[dependencies]
assert2.workspace = true
axum = "0.8.1"
clap = { version = "4.5.18", features = ["derive"] }
derive_more.workspace = true
fern.workspace = true
futures = "0.3.31"
html = "0.6.3"
humantime = "2.1.0"
indexmap = "2.12.1"
ink-document.workspace = true
ink-syntax.workspace = true
ink-test.workspace = true
itertools.workspace = true
jsonrpc = "0.18.0"
line-index.workspace = true
log.workspace = true
lsp-server = "0.7.7"
lsp-types.workspace = true
mini-milc = { git = "ssh://git@codeberg.org/wldmr/milc.git" }
notify = "6.1.1"
serde.workspace = true
serde_json.workspace = true
tap.workspace = true
text-annotations.workspace = true
tokio = { version = "1.43.0", features = ["rt"] }
tree-sitter-ink.workspace = true
tree-sitter.workspace = true
tree-traversal = { path = "./crates/tree-traversal" }
type-sitter.workspace = true
util.workspace = true
walkdir.workspace = true
enumflags2 = "0.7.12"

[dev-dependencies]
annotate-snippets = "0.12"
derive-quickcheck-arbitrary.workspace = true
indoc.workspace = true
pretty_assertions.workspace = true
quickcheck.workspace = true
strum = { version = "0.26.3", features = ["derive"] }
test-case.workspace = true
rassert.workspace = true

[build-dependencies]
cc="*"
derive_builder = "0.20.0"
markdown = "1.0.0-alpha.17"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
