[package]
name = "ink-document"
version.workspace = true
edition.workspace = true

[dependencies]
tree-sitter.workspace = true
tree-sitter-ink.workspace = true
lsp-types.workspace = true # TODO: Stopgap measure? Maybe don't depend on LSP here?
log.workspace = true
tap.workspace = true
derive_more.workspace = true
line-index.workspace = true

[dependencies.type-sitter]
version = "0.8"
# path = "../type-sitter/type-sitter-lib"
# git = "https://github.com/wldmr/type-sitter.git"
git = "https://github.com/jakobeha/type-sitter.git"
# branch = "main"

[build-dependencies]
tree-sitter-ink.workspace = true

[build-dependencies.type-sitter-gen]
version = "0.8"
# path = "../type-sitter/type-sitter-gen"
# git = "https://github.com/wldmr/type-sitter.git"
git = "https://github.com/jakobeha/type-sitter.git"
# branch = "main"


[dev-dependencies]
test-case.workspace = true
assert2.workspace = true
indoc.workspace = true
pretty_assertions.workspace = true
