[package]
name = "ink-test"
description = "Testing ink stories against a compiler"
version.workspace = true
edition.workspace = true

[dependencies]
derive_more.workspace = true
log.workspace = true
serde_json.workspace = true
serde.workspace = true
similar = "2.7.0"
tree-sitter.workspace = true
type-sitter.workspace = true
ink-syntax.workspace = true
ink-document.workspace = true
tree-traversal.workspace = true
yansi = "1.0.1"

[dev-dependencies]
assert2.workspace = true
pretty_assertions.workspace = true

