[package]
name = "text-annotations"
description = "Annotate regions of text"
version.workspace = true
edition.workspace = true

[dependencies]
type-sitter.workspace = true
lsp-types.workspace = true
indoc.workspace = true
itertools.workspace = true
pretty_assertions.workspace = true
assert2.workspace = true


